--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "astro": "5.1.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "0.469.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
